REFACTOR: Simplificar FiservClient y limpiezas menores
- FiservClient: helpers newRequestHeader() y postSignedTokenOp() que sacan
  la duplicacion de header+firma+POST (query/void eran casi identicos).
- FiservConfig.getVersionOrDefault(): el default 3.02 en un solo lugar.
- ApartmentService/AdminApartmentService: .toList() (Java 21).
- Rename DTOs: ApartmentDTO->AdminApartmentDTO, ApartmentResponseDTO->
  PublicApartmentDTO (nombres claros; sin cambio de contrato JSON).
Sin cambios de comportamiento; 12 tests verdes.